[gd_scene load_steps=16 format=2]

[ext_resource path="res://textures/graphics/card menu.png" type="Texture" id=1]
[ext_resource path="res://textures/buttons/green button hover.png" type="Texture" id=2]
[ext_resource path="res://textures/buttons/right arrow.png" type="Texture" id=3]
[ext_resource path="res://textures/buttons/green button press.png" type="Texture" id=4]
[ext_resource path="res://textures/buttons/green button.png" type="Texture" id=5]
[ext_resource path="res://textures/buttons/right arrow hover.png" type="Texture" id=6]
[ext_resource path="res://textures/characters/dollythegameshowhost.png" type="Texture" id=7]
[ext_resource path="res://textures/buttons/right arrow press.png" type="Texture" id=8]
[ext_resource path="res://textures/graphics/phone large content window.png" type="Texture" id=9]
[ext_resource path="res://textures/buttons/play button press.png" type="Texture" id=10]
[ext_resource path="res://textures/buttons/play button.png" type="Texture" id=11]
[ext_resource path="res://textures/buttons/play button hover.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Scripts/IntroScene.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]
resource_name = "intro1"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("IntroDialoguePanel/DialogueBox/DialogueText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.8, 0.9, 1.1, 1.2, 1.3, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "He", "Hey th", "Hey there,", "Hey there, stranger!", "Hey there, stranger! My", "Hey there, stranger! My n", "Hey there, stranger! My name's", "Hey there, stranger! My name's D", "Hey there, stranger! My name's Dolly", "Hey there, stranger! My name's Dolly,", "Hey there, stranger! My name's Dolly, and", "Hey there, stranger! My name's Dolly, and I'm", "Hey there, stranger! My name's Dolly, and I'm the", "Hey there, stranger! My name's Dolly, and I'm the h", "Hey there, stranger! My name's Dolly, and I'm the host", "Hey there, stranger! My name's Dolly, and I'm the host of a", "Hey there, stranger! My name's Dolly, and I'm the host of a new", "Hey there, stranger! My name's Dolly, and I'm the host of a new g", "Hey there, stranger! My name's Dolly, and I'm the host of a new game sh", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show.", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Wa", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want t", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to b", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to be", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to be a", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to be a s", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to be a st", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to be a sta", "Hey there, stranger! My name's Dolly, and I'm the host of a new game show. Want to be a star?" ]
}

[sub_resource type="Animation" id=2]
resource_name = "intro2"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("IntroDialoguePanel/DialogueBox/DialogueText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "It's", "It's called,", "It's called, \"Th", "It's called, \"The", "It's called, \"The L", "It's called, \"The Law", "It's called, \"The Law o", "It's called, \"The Law of", "It's called, \"The Law of S", "It's called, \"The Law of Sub", "It's called, \"The Law of Subtr", "It's called, \"The Law of Subtrac", "It's called, \"The Law of Subtractio", "It's called, \"The Law of Subtraction.\"", "It's called, \"The Law of Subtraction.\"", "It's called, \"The Law of Subtraction.\" We're", "It's called, \"The Law of Subtraction.\" We're loo", "It's called, \"The Law of Subtraction.\" We're looking", "It's called, \"The Law of Subtraction.\" We're looking for ", "It's called, \"The Law of Subtraction.\" We're looking for a con", "It's called, \"The Law of Subtraction.\" We're looking for a contestant", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to par", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to parti", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to partici", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the ", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pi", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot ep", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot epi", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot episode.", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot episode. Sound", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot episode. Sound like", "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot episode. Sound like fun?" ]
}

[node name="IntroScene" type="Node2D"]
script = ExtResource( 13 )

[node name="Dolly" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 648.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroDialoguePanel" type="TextureRect" parent="."]
margin_left = 408.0
margin_right = 896.0
margin_bottom = 576.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="TextureRect" parent="IntroDialoguePanel"]
margin_left = 48.0
margin_top = 40.0
margin_right = 416.0
margin_bottom = 256.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="IntroDialoguePanel/DialogueBox"]
margin_left = 24.0
margin_top = 16.0
margin_right = 352.0
margin_bottom = 200.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "It's called, \"The Law of Subtraction.\" We're looking for a contestant to participate in the pilot episode. Sound like fun?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="TextureButton" parent="IntroDialoguePanel"]
visible = false
margin_left = 120.0
margin_top = 304.0
margin_right = 320.0
margin_bottom = 422.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="YesButtonLabel" type="RichTextLabel" parent="IntroDialoguePanel/YesButton"]
margin_left = 64.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 72.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Absolutely!"

[node name="ProceedTextButton" type="TextureButton" parent="IntroDialoguePanel"]
margin_left = 336.0
margin_top = 272.0
margin_right = 396.0
margin_bottom = 332.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="IntroDialoguePanel"]
visible = false
margin_left = 112.0
margin_top = 332.0
margin_right = 348.0
margin_bottom = 450.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/intro1 = SubResource( 1 )
anims/intro2 = SubResource( 2 )
[connection signal="pressed" from="IntroDialoguePanel/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="IntroDialoguePanel/ProceedTextButton" to="." method="_on_ProceedTextButton_pressed"]
[connection signal="pressed" from="IntroDialoguePanel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
